Сделал первую навигацию как смог

--- a/index.html
+++ b/index.html
@@ -2,10 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Artefacts</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/variables.css">
+
 </head>
 <body>
-Привет world
+<header class="header">
+    <div class="container">
+        <div class="header__content">
+            <div class="header__logo">
+                <a href="#"><img src="images/logo.svg" alt="Логотип"></a>
+            </div>
+            <div class="header__nav">
+                <nav class="navigation">
+                    <ul class="navigation-list">
+                        <li class="navigation-item"><p class="regular">Каталог</p></li>
+                        <li class="navigation-item"><p class="regular">Галерея</p></li>
+                        <li class="navigation-item"><p class="regular">О лаборатории</p></li>
+                        <li class="navigation-item"><p class="regular">Контакты</p></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header__buttons">
+                <button class="search-button">
+                    <img src="images/search.svg" alt="Поиск">
+                </button>
+                <button class="log-in-button">
+                    <img src="images/log-in.svg" alt="Вход">
+                </button>
+            </div>
+        </div>
+    </div>
+</header>
+<main class="main"></main>
 </body>
 </html>
