Сделал макет как умею (без доработок)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="styles/navigation.css">
     <link rel="stylesheet" href="styles/start-screen.css">
     <link rel="stylesheet" href="styles/section-info.css">
+    <link rel="stylesheet" href="styles/section-new-artefacts.css">
+    <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
 <header class="header">
@@ -49,47 +51,111 @@
                 <p>Являясь всего лишь частью общей картины, интерактивные прототипы,<br>
                     которые представляют собой яркий пример европейского типа политической<br>
                     и социальной культуры.</p>
-                <a href="#">Исследовать <img src="images/Arrow%201.svg"></a>
+                <a href="#">Исследовать <img src="images/Arrow%201.svg" alt="Исследовать"></a>
             </div>
         </div>
     </section>
     <section class="section-info">
         <div class="container">
             <div class="section-info__cards">
-                <div class="section-info__card card-1">
+                <div class="section-info__card">
                     <div class="image-box">
                         <img src="images/Layer%203.png" alt="">
                     </div>
                     <h3>Fig. 1 (plant)</h3>
-                    <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего мира своевременно верифицированы.</p>
-                    <a href="#">Подробнее</a>
+                    <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
+                        мира своевременно верифицированы.</p>
+                    <div class="button">
+                        <a href="#">Подробнее</a>
+                    </div>
                 </div>
-                <div class="section-info__card card-2">
+                <div class="section-info__card">
                     <div class="image-box">
                         <img src="images/Layer%202.png" alt="">
                     </div>
                     <h3>Fig. 2 (plant)</h3>
-                    <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации условий.</p>
+                    <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации
+                        условий.</p>
+                    <div class="button">
+                        <a href="#">Подробнее</a>
+                    </div>
                 </div>
-                <div class="section-info__card card-3">
+                <div class="section-info__card">
                     <div class="image-box">
                         <img src="images/Layer%204.png" alt="">
                     </div>
                     <h3>Fig. 3 (leaf)</h3>
-                    <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены сами себе для работы.</p>
-
+                    <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены
+                        сами себе для работы.</p>
+                    <div class="button">
+                        <a href="#">Подробнее</a>
+                    </div>
                 </div>
-                <div class="section-info__card card-4">
+                <div class="section-info__card">
                     <div class="image-box">
                         <img src="images/Layer%201%201.png" alt="">
                     </div>
                     <h3>Fig. 4 (wood)</h3>
                     <p>Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.</p>
-
+                    <div class="button">
+                        <a href="#"><span>Подробнее</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="listing">
+                <div class="listing-items">
+                    <img src="images/Arrow%202.svg" alt="назад">
+                    <p>1 из 3</p>
+                    <img src="images/Arrow%202_2.svg" alt="вперёд">
                 </div>
             </div>
         </div>
     </section>
+    <section class="section-new-artefacts">
+        <div class="container">
+            <h2>Новые артефакты</h2>
+            <div class="section-new-artefacts__cards">
+                <div class="section-new-artefacts__card card-1">
+                </div>
+                <div class="section-new-artefacts__card card-2">
+                    <div class="card-2__info">
+                        <h3>Kurische Nehrung 24</h3>
+                        <p>Вот вам яркий пример современных тенденций - начало повседневной работы по формированию
+                            позиции выявляет срочную потребность методов управления процессами. </p>
+                        <p>Есть над чем задуматься: представители современных социальных резервов своевременно
+                            верифицированы.</p>
+                        <a href="#"><span>Читать далее</span><img src="images/Arrow%20Black.svg" alt="Читать далее"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-feedback">
+            <div class="container">
+                <div class="footer-feedback__content">
+                    <h2>Помочь проекту</h2>
+                    <p>Равным образом, экономическая повестка сегодняшнего дня не даёт нам иного выбора, кроме
+                        определения прогресса профессионального сообщества. Как принято считать, элементы политического
+                        процесса рассмотрены исключительно в разрезе маркетинговых и финансовых предпосылок. </p>
+                    <form action="" name="feedback">
+                        <input type="text" name="Name" placeholder="Имя" class="field">
+                        <input type="email" name="email" placeholder="Email" class="field" required>
+                        <input type="submit" value="Отправить" id="button">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="socials">
+            <a href="#"><img src="images/YT.png" alt="Youtube"></a>
+            <a href="#"><img src="images/IG.png" alt="Instagram"></a>
+            <a href="#"><img src="images/FB.png" alt="Facebook"></a>
+            <a href="#"><img src="images/X.png" alt="Twitter"></a>
+        </div>
+        <div class="copyright">
+            <p>f&b ® 2020</p>
+        </div>
+    </footer>
 </main>
 </body>
 </html>
