Сделал макет с доработками

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <section class="start-screen">
         <div class="container">
             <div class="start-screen__content">
-                <h1>Крупнейшая коллекция<br>
+                <h1>Крупнейшая коллекция
                     природных артефактов</h1>
-                <p>Являясь всего лишь частью общей картины, интерактивные прототипы,<br>
-                    которые представляют собой яркий пример европейского типа политической<br>
+                <p>Являясь всего лишь частью общей картины, интерактивные прототипы,
+                    которые представляют собой яркий пример европейского типа политической
                     и социальной культуры.</p>
                 <a href="#">Исследовать <img src="images/Arrow%201.svg" alt="Исследовать"></a>
             </div>
@@ -59,46 +59,51 @@
         <div class="container">
             <div class="section-info__cards">
                 <div class="section-info__card">
-                    <div class="image-box">
-                        <img src="images/Layer%203.png" alt="">
+                    <div class="section-info__image-box">
+                        <img src="images/Layer%203.png" alt="" class="section-info__image1">
+                        <img src="images/Group%20204_1.svg" alt="" class="section-info__image2">
                     </div>
-                    <h3>Fig. 1 (plant)</h3>
-                    <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего
-                        мира своевременно верифицированы.</p>
-                    <div class="button">
-                        <a href="#">Подробнее</a>
+                    <div class="section-info__content">
+                        <h3>Fig. 1 (plant)</h3>
+                        <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны
+                            третьего
+                            мира своевременно верифицированы.</p>
+                        <input type="button" value="Подробнее" class="section-info__button">
                     </div>
                 </div>
                 <div class="section-info__card">
-                    <div class="image-box">
+                    <div class="section-info__image-box">
                         <img src="images/Layer%202.png" alt="">
+                        <img src="images/Group%20204_2.svg" alt="" class="section-info__image2">
                     </div>
-                    <h3>Fig. 2 (plant)</h3>
-                    <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации
-                        условий.</p>
-                    <div class="button">
-                        <a href="#">Подробнее</a>
+                    <div class="section-info__content">
+                        <h3>Fig. 2 (plant)</h3>
+                        <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации
+                            условий.</p>
+                        <input type="button" value="Подробнее" class="section-info__button">
                     </div>
                 </div>
                 <div class="section-info__card">
-                    <div class="image-box">
+                    <div class="section-info__image-box">
                         <img src="images/Layer%204.png" alt="">
+                        <img src="images/Group%20204_3.svg" alt="" class="section-info__image2">
                     </div>
-                    <h3>Fig. 3 (leaf)</h3>
-                    <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены
-                        сами себе для работы.</p>
-                    <div class="button">
-                        <a href="#">Подробнее</a>
+                    <div class="section-info__content">
+                        <h3>Fig. 3 (leaf)</h3>
+                        <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены
+                            сами себе для работы.</p>
+                        <input type="button" value="Подробнее" class="section-info__button">
                     </div>
                 </div>
                 <div class="section-info__card">
-                    <div class="image-box">
+                    <div class="section-info__image-box">
                         <img src="images/Layer%201%201.png" alt="">
+                        <img src="images/Group%20204_4.svg" alt="" class="section-info__image2">
                     </div>
-                    <h3>Fig. 4 (wood)</h3>
-                    <p>Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.</p>
-                    <div class="button">
-                        <a href="#"><span>Подробнее</span></a>
+                    <div class="section-info__content">
+                        <h3>Fig. 4 (wood)</h3>
+                        <p>Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.</p>
+                        <input type="button" value="Подробнее" class="section-info__button">
                     </div>
                 </div>
             </div>
@@ -121,8 +126,10 @@
                     <div class="card-2__info">
                         <h3>Kurische Nehrung 24</h3>
                         <p>Вот вам яркий пример современных тенденций - начало повседневной работы по формированию
-                            позиции выявляет срочную потребность методов управления процессами. </p>
-                        <p>Есть над чем задуматься: представители современных социальных резервов своевременно
+                            позиции выявляет срочную потребность методов управления процессами.
+                            <br>
+                            <br>
+                            Есть над чем задуматься: представители современных социальных резервов своевременно
                             верифицированы.</p>
                         <a href="#"><span>Читать далее</span><img src="images/Arrow%20Black.svg" alt="Читать далее"></a>
                     </div>
@@ -141,7 +148,7 @@
                     <form action="" name="feedback">
                         <input type="text" name="Name" placeholder="Имя" class="field">
                         <input type="email" name="email" placeholder="Email" class="field" required>
-                        <input type="submit" value="Отправить" id="button">
+                        <input type="button" value="Отправить" id="button">
                     </form>
                 </div>
             </div>
